# apostate

./: .dockerignore  .gitignore  4-bit; fi  Apostate-Setup.cmd  Dockerfile  Dockerfile.rocm  README.md  apostate-docker.sh  apostate.cmd  apostate.ps1  main.js  package-lock.json  package.json  pyproject.toml  requirements.txt  setup.js  setup.sh  test_tui.js  tui.js
apostate/: __init__.py  __main__.py  accel.py  activations.py  bake.py  benchcode.py  benchmark.py  causal.py  chat.py  cli.py  codeeval.py  config.py  data.py  directions.py  discover.py  doctor.py  engine.py  evalsuite.py  evaluate.py  finetune.py  guard.py  model.py  moe_compat.py  moe_nf4.py  optimize.py  projectors.py  prune.py  quant.py  quantize.py  reports.py  search.py  setup_wizard.py  ticv.py  triton_nf4.py  tui.py  vllm_backend.py  vllm_serve.sh
data/: uncensored.jsonl
docs/: gemma-4-e4b-speed.md
docs/benchmark-runs/: 2026-05-31-heretic-head-to-head.md
docs/speed-runs/: 2026-05-31-ablation-speed.md
scripts/: make_graphs.py
